weird bug with tag closure

--- a/app/views/statuses/_chart.html.erb
+++ b/app/views/statuses/_chart.html.erb
@@ -20,7 +20,7 @@
         <%= render :partial => "statuses/gchart_other", :locals => chart_hash %>
       <% end -%>
     <% end # hours.empty? -%>
-  <% end # ! daily %>
+  <% end # ! daily -%>
   
   <p class="special-num">
     <% if total && chart.hours(params[:filter], params[:date]) > total %>
